<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialogIPText"
            android:id="@+id/textView2" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.89" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialogPortText"
            android:id="@+id/textView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <midnet.fsclient.IPAddressText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ipTextDialog"
            android:layout_weight="0.10"
            android:hint="@string/ipHint"
            android:inputType="number"
            android:text="@string/ipDefault" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.75" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/portTextDialog"
            android:hint="@string/portHint"
            android:layout_weight="0.16"
            android:text="@string/portDefault" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dialogFeedText"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedTextDialog"
        android:hint="@string/feedHint"
        android:inputType="textNoSuggestions"
        android:text="@string/feedDefault" />

</LinearLayout>