<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/runText"
            android:id="@+id/buttonRun"
            android:textColor="#339933"
            android:singleLine="false"
            android:layout_weight="0.16" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <midnet.fsclient.IPAddressText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ipText"
            android:layout_weight="0.50"
            android:hint="@string/ipHint"
            android:inputType="number"
            android:text="@string/ipDefault" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/portText"
            android:layout_weight="0.50"
            android:hint="@string/portHint"
            android:text="@string/portDefault" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debugTest"
        android:editable="false"
        android:inputType="none" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socketText"
        android:inputType="none"
        android:editable="false" />


</LinearLayout>